--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.chatapp"
@@ -67,4 +67,6 @@ dependencies {
 //    reaction
     implementation 'io.github.amrdeveloper:reactbutton:2.0.3'
 
+//    aes encrypt decrypt
+    implementation 'com.scottyab:aescrypt:0.0.1'
 }
